[package]
name = "ishtar"
version = "0.1.0"
authors = ["Yuuki Wesp <ls-micro@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linq = "0.0.1-release"
stopwatch = "0.0.7"
half = "1.7.1"
decimal = "2.1.0"
ctor = "0.1.20"
libc = "0.2.93"
elf_rs = "0.1.3"
binary-reader = "0.3.0"